[package]
name = "letsplay_av_ffmpeg"
description = "FFmpeg abstraction for Let's Play"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true

# GPU stuff
letsplay_gpu.path = "../letsplay_gpu"
gl.workspace = true

cudarc = { version = "0.12.1", features = [ "cuda-11050" ] }
ffmpeg = { version = "7.0.0", package = "ffmpeg-next" }
libloading = "0.8.5"

# FIXME: Features or such so we can abstract given HW implementations.

